--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
+  "compilerOptions": {
+    "jsx": "react-native",
+},
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    
   }
 }
